@@ -13,7 +13,7 @@ require 'set'
 
 require 'base'
 require 'processor/validator'
-require 'tag_helper'
-require 'asset_tag_helper'
+require 'view/tag_helper'
+require 'view/asset_tag_helper'
 require 'support/file'
 require 'configuration/config'
