@@ -37,9 +37,6 @@ Gem::Specification.new do |s|
      "features/support/env.rb",
      "features/ymdp.feature",
      "lib/ymdp.rb",
-     "lib/ymdp/application.rb",
-     "lib/ymdp/application_view.rb",
-     "lib/ymdp/asset_tag_helper.rb",
      "lib/ymdp/base.rb",
      "lib/ymdp/commands/build.rb",
      "lib/ymdp/commands/generate.rb",
@@ -59,9 +56,12 @@ Gem::Specification.new do |s|
      "lib/ymdp/processor/validator.rb",
      "lib/ymdp/processor/w3c.rb",
      "lib/ymdp/support/file.rb",
-     "lib/ymdp/tag_helper.rb",
      "lib/ymdp/tasks/keys.rake",
      "lib/ymdp/tasks/ymdp.rake",
+     "lib/ymdp/view/application.rb",
+     "lib/ymdp/view/application_view.rb",
+     "lib/ymdp/view/asset_tag_helper.rb",
+     "lib/ymdp/view/tag_helper.rb",
      "spec/application_spec.rb",
      "spec/application_view_spec.rb",
      "spec/compiler_spec.rb",
