@@ -4,6 +4,7 @@
     * exposed "host" attribute within templates
     * send content into template with <tt>yield</tt> instead of instance variable
     * Cucumber tests
+    * refactor application_view into <tt>view</tt> folder
   * bug fixes
     * fixed filename in form_post.rb
     * removed unneeded data folder from /spec
